--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,9 @@ selenium = "*"
 splinter = "*"
 black = "*"
 pprint = "*"
+flask = "*"
+flask-pymongo = "*"
+lxml = "*"
 
 [requires]
 python_version = "3.8"
